--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,14 +5,19 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
+
+
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
+
+
 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
 end
+
 
 target 'Branch_Test_RN_NC' do
   config = use_native_modules!
@@ -22,6 +27,19 @@ target 'Branch_Test_RN_NC' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  # Pods for YourAppTarget
+
+
+  #use_frameworks!
+
+  # Pods for YourAppTarget
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'FirebaseMessaging', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'react-native-branch', path: '../node_modules/react-native-branch'
 
   target 'Branch_Test_RN_NCTests' do
     inherit! :complete
